Add website content generated from `dd5df4be049ff14b89337a8c91aa4f05ffa3d72b`

--- a/release-notes.html
+++ b/release-notes.html
@@ -390,6 +390,9 @@
 <p>Fix usage of <code>log4j-api</code> in GraalVM without additional reachability data. (<a href="https://github.com/apache/logging-log4j2/issues/1539">1539</a>)</p>
 </li>
 <li>
+<p>Ignore exceptions thrown by PropertySources. (<a href="https://github.com/spring-projects/spring-boot/issues/33450">Spring-33450</a>)</p>
+</li>
+<li>
 <p>Add logging to <code>PropertiesUtil</code> and fix <code>Duration</code> parser. (<a href="https://github.com/apache/logging-log4j2/issues/1936">1936</a>)</p>
 </li>
 <li>
@@ -406,6 +409,9 @@
 </li>
 <li>
 <p>Improve missing plugin descriptor warnings. (<a href="https://github.com/apache/logging-log4j2/issues/2835">2835</a>)</p>
+</li>
+<li>
+<p>Fixes property source ordering to account for same priority of different sources. (<a href="https://issues.apache.org/jira/browse/LOG4J2-3618">LOG4J2-3618</a>)</p>
 </li>
 <li>
 <p>Prioritize user-defined values of <code>log4j2.enableThreadLocals</code>, <code>log4j2.garbagefreeThreadContextMap</code> and <code>log4j2.shutdownHookEnabled</code> over the value of <code>log4j.isWebapp</code>.</p>
@@ -603,7 +609,7 @@
 <p>Update <code>org.mongodb:bson</code> to version <code>5.1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2823">2823</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>5.3.37</code> (<a href="https://github.com/apache/logging-log4j2/pull/2656">2656</a>)</p>
+<p>Update <code>org.springframework:spring-framework-bom</code> to version <code>5.3.39</code> (<a href="https://github.com/apache/logging-log4j2/pull/2840">2840</a>)</p>
 </li>
 <li>
 <p>Update <code>org.tukaani:xz</code> to version <code>1.10</code> (<a href="https://github.com/apache/logging-log4j2/pull/2779">2779</a>)</p>
