Add website content generated from `e6c7f197f2f9a3dda109b669ea9b2d73d5a77d24`

--- a/release-notes.html
+++ b/release-notes.html
@@ -408,6 +408,9 @@
 <p>Replace some usages of <code>DateTimeFormatter#toString()</code> with <code>DateTimeFormatter#formatTo(StringBuilder)</code> to cut down on allocations (<a href="https://github.com/apache/logging-log4j2/pull/2515">2515</a>)</p>
 </li>
 <li>
+<p>Disable programmatic configuration in Log4j 1 Bridge if <code>log4j1.compatibility</code> is <code>false</code>. (<a href="https://github.com/apache/logging-log4j2/issues/2778">2778</a>)</p>
+</li>
+<li>
 <p>Improve missing plugin descriptor warnings. (<a href="https://github.com/apache/logging-log4j2/issues/2835">2835</a>)</p>
 </li>
 <li>
