Add website content generated from `f7d3725202a40f92206132178fa2a9bedd271f70`

--- a/release-notes.html
+++ b/release-notes.html
@@ -461,6 +461,9 @@
 <p>Fix location requirement for the <code>%F</code> and <code>%file</code> keys in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/issues/2781">2781</a>)</p>
 </li>
 <li>
+<p>Fix <code>JsonLayout</code> failure under JPMS. (<a href="https://github.com/apache/logging-log4j2/issues/2814">2814</a>)</p>
+</li>
+<li>
 <p>Fix empty string handling for <code>TruncatingBufferedWriter</code> (<a href="https://github.com/apache/logging-log4j2/pull/2609">2609</a>)</p>
 </li>
 <li>
