--- a/release-notes.html
+++ b/release-notes.html
@@ -393,7 +393,7 @@
 <p>Ignore exceptions thrown by PropertySources. (<a href="https://github.com/spring-projects/spring-boot/issues/33450">Spring-33450</a>)</p>
 </li>
 <li>
-<p>Add logging to <code>PropertiesUtil</code> and fix <code>Duration</code> parser. (<a href="https://github.com/apache/logging-log4j2/issues/1936">1936</a>)</p>
+<p>Add logging to <code>PropertiesUtil</code> and fix <code>Duration</code> parser. (<a href="https://github.com/apache/logging-log4j2/issues/1963">1936</a>)</p>
 </li>
 <li>
 <p>Centralize initialization in the <code>Provider</code> class and deprecate <code>log4j2.loggerContextFactory</code> property. (<a href="https://github.com/apache/logging-log4j2/pull/2374">2374</a>)</p>
@@ -417,10 +417,10 @@
 <p>Fixes property source ordering to account for same priority of different sources. (<a href="https://issues.apache.org/jira/browse/LOG4J2-3618">LOG4J2-3618</a>)</p>
 </li>
 <li>
-<p>Prioritize user-defined values of <code>log4j2.enableThreadLocals</code>, <code>log4j2.garbagefreeThreadContextMap</code> and <code>log4j2.shutdownHookEnabled</code> over the value of <code>log4j.isWebapp</code>.</p>
+<p>Prioritize user-defined values of <code>log4j2.enableThreadLocals</code>, <code>log4j2.garbagefreeThreadContextMap</code> and <code>log4j2.shutdownHookEnabled</code> over the value of <code>log4j.isWebapp</code>. (<a href="https://github.com/apache/logging-log4j2/pull/2517">2517</a>)</p>
 </li>
 <li>
-<p>Deprecate <code>log4j2.defaultStatusLevel</code> property in Log4j Core in favor of <code>log4j2.statusLoggerLevel</code></p>
+<p>Deprecate <code>log4j2.defaultStatusLevel</code> property in Log4j Core in favor of <code>log4j2.statusLoggerLevel</code> (<a href="https://github.com/apache/logging-log4j2/pull/2481">2481</a>)</p>
 </li>
 </ul>
 </div>
@@ -430,16 +430,16 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Deprecate <code>Message#getFormat()</code> due to unclear semantics and inconsistent implementations</p>
+<p>Deprecate <code>Message#getFormat()</code> due to unclear semantics and inconsistent implementations (<a href="https://github.com/apache/logging-log4j2/pull/2773">2773</a>)</p>
 </li>
 <li>
-<p>Deprecate <code>org.apache.logging.log4j.EventLogger</code> for removal</p>
+<p>Deprecate <code>org.apache.logging.log4j.EventLogger</code> for removal (<a href="https://github.com/apache/logging-log4j2/pull/2665">2665</a>)</p>
 </li>
 <li>
-<p>Deprecate <code>org.apache.logging.log4j.core.appender.rolling.action.Duration</code> class for removal</p>
+<p>Deprecate <code>org.apache.logging.log4j.core.appender.rolling.action.Duration</code> class for removal (<a href="https://github.com/apache/logging-log4j2/pull/2425">2425</a>)</p>
 </li>
 <li>
-<p>Deprecate the <code>log4j-mongodb4</code> module in favor of <code>log4j-mongodb</code></p>
+<p>Deprecate the <code>log4j-mongodb4</code> module in favor of <code>log4j-mongodb</code> (<a href="https://github.com/apache/logging-log4j2/pull/2486">2486</a>)</p>
 </li>
 </ul>
 </div>
@@ -486,10 +486,10 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Add module log4j-mongodb to track the current MongoDB driver (currently version 5).</p>
+<p>Add module log4j-mongodb to track the current MongoDB driver (currently version 5). (<a href="https://github.com/apache/logging-log4j2/pull/2486">2486</a>)</p>
 </li>
 <li>
-<p>Remove module log4j-mongodb3, use log4j-mongodb instead, log4j-mongodb4 is deprecated for removal.</p>
+<p>Remove module log4j-mongodb3, use log4j-mongodb instead, log4j-mongodb4 is deprecated for removal. (<a href="https://github.com/apache/logging-log4j2/pull/2486">2486</a>)</p>
 </li>
 <li>
 <p>Update <code>actions/checkout</code> to version <code>4.1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2497">2497</a>)</p>
