--- a/release-notes.html
+++ b/release-notes.html
@@ -396,6 +396,9 @@
 <p>Add logging to <code>PropertiesUtil</code> and fix <code>Duration</code> parser. (<a href="https://github.com/apache/logging-log4j2/issues/1963">1936</a>)</p>
 </li>
 <li>
+<p>Disable level modification via JUL by default. (<a href="https://github.com/apache/logging-log4j2/issues/2353">2353</a>)</p>
+</li>
+<li>
 <p>Centralize initialization in the <code>Provider</code> class and deprecate <code>log4j2.loggerContextFactory</code> property. (<a href="https://github.com/apache/logging-log4j2/pull/2374">2374</a>)</p>
 </li>
 <li>
