Add website content generated from `f5ddc790897d0149957e7b634c329a671c1df120`

--- a/jakarta.html
+++ b/jakarta.html
@@ -877,6 +877,21 @@ asyncContext.start(() -&gt; {
 </div>
 <div class="sect2">
 <h3 id="log4j-taglib"><a class="anchor" href="#log4j-taglib"></a>Logging in JavaServer Pages</h3>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p><strong>The Log4j Tag library is planned to be removed in the next major release!</strong>
+If you are using this library, please get in touch with the Log4j maintainers using <a href="https://logging.apache.org/support.html">the official support channels</a>.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <p>To help users add logging statements to JavaServer Pages, Log4j provides a JSP tag library modeled after the
 <a href="https://web.archive.org/web/20140215182415/http://jakarta.apache.org/taglibs/log/">Jakarta Commons Log Tag library</a>.
