--- a/manual/appenders/database.html
+++ b/manual/appenders/database.html
@@ -757,6 +757,21 @@ The <code>uuid</code> column is additionally converted into a <code>java.util.UU
 <div class="sect1">
 <h2 id="CassandraAppender"><a class="anchor" href="#CassandraAppender"></a>Cassandra Appender</h2>
 <div class="sectionbody">
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p><strong>This appender is planned to be removed in the next major release!</strong>
+If you are using this library, please get in touch with the Log4j maintainers using <a href="https://logging.apache.org/support.html">the official support channels</a>.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <p>The Cassandra Appender writes its output to an
 <a href="https://cassandra.apache.org/_/index.html">Apache Cassandra</a>
@@ -2027,6 +2042,21 @@ See <a href="#ColumnMapping">Column mapping</a> for more details.</td>
 <div class="sect1">
 <h2 id="JpaAppender"><a class="anchor" href="#JpaAppender"></a>JPA Appender</h2>
 <div class="sectionbody">
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p><strong>This appender is planned to be removed in the next major release!</strong>
+If you are using this library, please get in touch with the Log4j maintainers using <a href="https://logging.apache.org/support.html">the official support channels</a>.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <p>The JPA Appender writes log events to a relational database table using the
 <a href="https://jakarta.ee/specifications/persistence/2.2/">Jakarta Persistence API 2.2</a>.
@@ -2952,6 +2982,21 @@ will be used.</p></td>
 </div>
 <div class="sect2">
 <h3 id="CouchDbProvider"><a class="anchor" href="#CouchDbProvider"></a>Apache CouchDB provider</h3>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p><strong>This provider is planned to be removed in the next major release!</strong>
+If you are using this library, please get in touch with the Log4j maintainers using <a href="https://logging.apache.org/support.html">the official support channels</a>.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 <div class="paragraph">
 <p>The <code>CouchDb</code> Provider allows using the <a href="#NoSqlAppender">NoSQL Appender</a> with an
 <a href="https://couchdb.apache.org/">Apache CouchDB database</a>.
