Add website content generated from `78af3169351a2ba059cc7d98d21042c6497027e6`

--- a/release-notes.html
+++ b/release-notes.html
@@ -417,6 +417,9 @@
 <p>Improve missing plugin descriptor warnings. (<a href="https://github.com/apache/logging-log4j2/issues/2835">2835</a>)</p>
 </li>
 <li>
+<p>Remove configuration properties caching and (undocumented) fuzzy property name matching. (<a href="https://github.com/apache/logging-log4j2/pull/2849">2849</a>)</p>
+</li>
+<li>
 <p>Fixes property source ordering to account for same priority of different sources. (<a href="https://issues.apache.org/jira/browse/LOG4J2-3618">LOG4J2-3618</a>)</p>
 </li>
 <li>
