--- a/release-notes.html
+++ b/release-notes.html
@@ -455,6 +455,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Fix custom thread-context data provider handling in lookups and filters. (<a href="https://github.com/apache/logging-log4j2/issues/2331">2331</a>)</p>
+</li>
+<li>
 <p>Fix handling of <code>log4j2.messageFactory</code> and <code>log4j2.flowMessageFactory</code> properties (<a href="https://github.com/apache/logging-log4j2/pull/2505">2505</a>)</p>
 </li>
 <li>
