--- a/release-notes.html
+++ b/release-notes.html
@@ -365,6 +365,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Add <code>useFqdn</code> configuration attribute to RFC5424 Layout. (<a href="https://github.com/apache/logging-log4j2/issues/1740">1740</a>)</p>
+</li>
+<li>
 <p>Add a faster <code>ThreadContextMap</code> for web app users: <code>org.apache.logging.log4j.internal.map.StringArrayThreadContextMap</code>. (<a href="https://github.com/apache/logging-log4j2/pull/2330">2330</a>)</p>
 </li>
 <li>
