Add website content generated from `f27f6bce68f4c5e42b100366d5cf1b4018525e2a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -368,7 +368,7 @@
 <p>Add <code>useFqdn</code> configuration attribute to RFC5424 Layout. (<a href="https://github.com/apache/logging-log4j2/issues/1740">1740</a>)</p>
 </li>
 <li>
-<p>Add a faster <code>ThreadContextMap</code> for web app users: <code>org.apache.logging.log4j.internal.map.StringArrayThreadContextMap</code>. (<a href="https://github.com/apache/logging-log4j2/pull/2330">2330</a>)</p>
+<p>Add a faster <code>DefaultThreadContextMap</code> implementation. (<a href="https://github.com/apache/logging-log4j2/pull/2330">2330</a>)</p>
 </li>
 <li>
 <p>Add Logback throwable-consuming semantics as an option in <code>log4j-slf4j-impl</code> and <code>log4j-slf4j2-impl</code>. Users can enable it by setting the property <code>log4j2.messageFactory</code> to <code>org.apache.logging.slf4j.message.ThrowableConsumingMessageFactory</code>. (<a href="https://github.com/apache/logging-log4j2/issues/2363">2363</a>)</p>
@@ -582,7 +582,7 @@
 <p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.9</code> (<a href="https://github.com/apache/logging-log4j2/pull/2861">2861</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.maven.surefire:surefire-junit47</code> to version <code>3.4.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2862">2862</a>)</p>
+<p>Update <code>org.apache.maven.surefire:surefire-junit47</code> to version <code>3.5.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2898">2898</a>)</p>
 </li>
 <li>
 <p>Update <code>org.assertj:assertj-core</code> to version <code>3.26.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2730">2730</a>)</p>
