Add website content generated from `10b7112bbf0adb3d17a45bb6b2daae745831284e`

--- a/release-notes.html
+++ b/release-notes.html
@@ -504,58 +504,19 @@
 <p>Remove module log4j-mongodb3, use log4j-mongodb instead, log4j-mongodb4 is deprecated for removal. (<a href="https://github.com/apache/logging-log4j2/pull/2486">2486</a>)</p>
 </li>
 <li>
-<p>Update <code>actions/checkout</code> to version <code>4.1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2497">2497</a>)</p>
-</li>
-<li>
-<p>Update <code>actions/upload-artifact</code> to version <code>4.3.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2490">2490</a>)</p>
-</li>
-<li>
-<p>Update <code>apache/logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j2/pull/2597">2597</a>)</p>
-</li>
-<li>
-<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2817">2817</a>)</p>
-</li>
-<li>
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.17.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2719">2719</a>)</p>
-</li>
-<li>
-<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2761">2761</a>)</p>
-</li>
-<li>
-<p>Update <code>com.google.guava:guava</code> to version <code>33.3.0-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/2860">2860</a>)</p>
-</li>
-<li>
-<p>Update <code>com.gradle:develocity-maven-extension</code> to version <code>1.21.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2642">2642</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-codec:commons-codec</code> to version <code>1.17.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2741">2741</a>)</p>
 </li>
 <li>
-<p>Update <code>commons-io:commons-io</code> to version <code>2.16.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2459">2459</a>)</p>
-</li>
-<li>
 <p>Update <code>commons-logging:commons-logging</code> to version <code>1.3.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2864">2864</a>)</p>
-</li>
-<li>
-<p>Update <code>de.flapdoodle.embed:de.flapdoodle.embed.mongo</code> to version <code>4.13.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2759">2759</a>)</p>
-</li>
-<li>
-<p>Update <code>de.flapdoodle.reverse:de.flapdoodle.reverse</code> to version <code>1.8.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2881">2881</a>)</p>
 </li>
 <li>
 <p>Update <code>github/codeql-action</code> to version <code>3.25.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2483">2483</a>)</p>
 </li>
 <li>
 <p>Update <code>io.fabric8:docker-maven-plugin</code> to version <code>0.45.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2776">2776</a>)</p>
-</li>
-<li>
-<p>Update <code>io.netty:netty-bom</code> to version <code>4.1.112.Final</code> (<a href="https://github.com/apache/logging-log4j2/pull/2760">2760</a>)</p>
-</li>
-<li>
-<p>Update <code>net.javacrumbs.json-unit:json-unit</code> to version <code>2.40.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2751">2751</a>)</p>
-</li>
-<li>
-<p>Update <code>org.apache.activemq:activemq-broker</code> to version <code>6.1.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2808">2808</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.cassandra:cassandra-all</code> to version <code>3.11.17</code> (<a href="https://github.com/apache/logging-log4j2/pull/2479">2479</a>)</p>
@@ -567,58 +528,16 @@
 <p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.11.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2565">2565</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.16.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2809">2809</a>)</p>
-</li>
-<li>
 <p>Update <code>org.apache.kafka:kafka-clients</code> to version <code>3.8.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2777">2777</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging.log4j:log4j-docgen-maven-plugin</code> to version <code>0.9.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2578">2578</a>)</p>
-</li>
-<li>
-<p>Update <code>org.apache.logging:logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j2/pull/2600">2600</a>)</p>
-</li>
-<li>
-<p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.9</code> (<a href="https://github.com/apache/logging-log4j2/pull/2861">2861</a>)</p>
-</li>
-<li>
-<p>Update <code>org.apache.maven.surefire:surefire-junit47</code> to version <code>3.5.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2898">2898</a>)</p>
-</li>
-<li>
-<p>Update <code>org.assertj:assertj-core</code> to version <code>3.26.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2730">2730</a>)</p>
-</li>
-<li>
-<p>Update <code>org.awaitility:awaitility</code> to version <code>4.2.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2804">2804</a>)</p>
-</li>
-<li>
-<p>Update <code>org.codehaus.groovy:groovy-bom</code> to version <code>3.0.22</code> (<a href="https://github.com/apache/logging-log4j2/pull/2698">2698</a>)</p>
+<p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.2.0</code></p>
 </li>
 <li>
 <p>Update <code>org.eclipse.jetty:jetty-bom</code> to version <code>9.4.55.v20240627</code> (<a href="https://github.com/apache/logging-log4j2/pull/2709">2709</a>)</p>
 </li>
 <li>
-<p>Update <code>org.eclipse.persistence:org.eclipse.persistence.jpa</code> to version `` (<a href="https://github.com/apache/logging-log4j2/pull/2602">2602</a>)</p>
-</li>
-<li>
-<p>Update <code>org.hamcrest:hamcrest</code> to version <code>3.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2788">2788</a>)</p>
-</li>
-<li>
-<p>Update <code>org.hdrhistogram:HdrHistogram</code> to version <code>2.2.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2627">2627</a>)</p>
-</li>
-<li>
-<p>Update <code>org.hsqldb:hsqldb</code> to version <code>2.7.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2631">2631</a>)</p>
-</li>
-<li>
 <p>Update <code>org.jctools:jctools-core</code> to version <code>4.0.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/2637">2637</a>)</p>
-</li>
-<li>
-<p>Update <code>org.jmdns:jmdns</code> to version <code>3.5.12</code> (<a href="https://github.com/apache/logging-log4j2/pull/2879">2879</a>)</p>
-</li>
-<li>
-<p>Update <code>org.junit:junit-bom</code> to version <code>5.10.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2693">2693</a>)</p>
-</li>
-<li>
-<p>Update log4j-mongodb3 <code>org.mongodb:*</code> to version <code>3.12.14</code> (<a href="https://github.com/apache/logging-log4j2/pull/2409">2409</a>)</p>
 </li>
 <li>
 <p>Update log4j-mongodb4 <code>org.mongodb:*</code> from <code>4.11.1</code> to <code>4.11.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2409">2409</a>)</p>
@@ -631,12 +550,6 @@
 </li>
 <li>
 <p>Update <code>org.springframework:spring-framework-bom</code> to version <code>5.3.39</code> (<a href="https://github.com/apache/logging-log4j2/pull/2840">2840</a>)</p>
-</li>
-<li>
-<p>Update <code>org.tukaani:xz</code> to version <code>1.10</code> (<a href="https://github.com/apache/logging-log4j2/pull/2779">2779</a>)</p>
-</li>
-<li>
-<p>Update <code>org.xmlunit:xmlunit-core</code> to version <code>2.10.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2546">2546</a>)</p>
 </li>
 </ul>
 </div>
