Add website content generated from `39dba0a24a8c77839c474b2d8c47b8fcf5eb7467`

--- a/release-notes.html
+++ b/release-notes.html
@@ -494,6 +494,16 @@
 </div>
 </div>
 <div class="sect2">
+<h3 id="release-notes-2-x-x-removed"><a class="anchor" href="#release-notes-2-x-x-removed"></a>Removed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Move Flume Appender to its own release lifecycle. (<a href="https://github.com/apache/logging-log4j2/issues/2902">2902</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
 <h3 id="release-notes-2-x-x-updated"><a class="anchor" href="#release-notes-2-x-x-updated"></a>Updated</h3>
 <div class="ulist">
 <ul>
@@ -505,6 +515,9 @@
 </li>
 <li>
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.17.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2719">2719</a>)</p>
+</li>
+<li>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-5</code> (<a href="https://github.com/apache/logging-log4j2/pull/2901">2901</a>)</p>
 </li>
 <li>
 <p>Update <code>commons-codec:commons-codec</code> to version <code>1.17.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2741">2741</a>)</p>
