Add website content generated from `23cae42b76b641b6cc6918601e5c6b0e57fa0d8f`

--- a/release-notes.html
+++ b/release-notes.html
@@ -541,6 +541,9 @@
 <p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.11.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2565">2565</a>)</p>
 </li>
 <li>
+<p>Update <code>org.apache.commons:commons-lang3</code> to version <code>3.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2907">2907</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.kafka:kafka-clients</code> to version <code>3.8.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2777">2777</a>)</p>
 </li>
 <li>
