--- a/release-notes.html
+++ b/release-notes.html
@@ -429,6 +429,9 @@
 <p>Prioritize user-defined values of <code>log4j2.enableThreadLocals</code>, <code>log4j2.garbagefreeThreadContextMap</code> and <code>log4j2.shutdownHookEnabled</code> over the value of <code>log4j.isWebapp</code>. (<a href="https://github.com/apache/logging-log4j2/pull/2517">2517</a>)</p>
 </li>
 <li>
+<p>Disallow duplicate keys in JSON Template Layout templates</p>
+</li>
+<li>
 <p>Deprecate <code>log4j2.defaultStatusLevel</code> property in Log4j Core in favor of <code>log4j2.statusLoggerLevel</code> (<a href="https://github.com/apache/logging-log4j2/pull/2481">2481</a>)</p>
 </li>
 </ul>
