Add website content generated from `b63c6b7fb37bf1fd05d143581f2e8be837f1f92f`

--- a/release-notes.html
+++ b/release-notes.html
@@ -371,7 +371,7 @@
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.17.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2718">2718</a>)</p>
 </li>
 <li>
-<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2762">2762</a>)</p>
+<p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-5</code> (<a href="https://github.com/apache/logging-log4j2/pull/2900">2900</a>)</p>
 </li>
 <li>
 <p>Update <code>com.github.tomakehurst:wiremock-jre8</code> to version <code>2.35.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/2305">2305</a>)</p>
@@ -404,7 +404,7 @@
 <p>Update <code>io.netty:netty-bom</code> to version <code>4.1.112.Final</code> (<a href="https://github.com/apache/logging-log4j2/pull/2763">2763</a>)</p>
 </li>
 <li>
-<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2878">2878</a>)</p>
+<p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2905">2905</a>)</p>
 </li>
 <li>
 <p>Update <code>net.javacrumbs.json-unit:json-unit</code> to version <code>3.4.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/2748">2748</a>)</p>
@@ -428,7 +428,7 @@
 <p>Update <code>org.apache.logging.log4j:log4j-docgen-maven-plugin</code> to version <code>0.9.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2579">2579</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging:logging-parent</code> to version `` (<a href="https://github.com/apache/logging-log4j2/pull/2599">2599</a>)</p>
+<p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2903">2903</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.maven:maven-core</code> to version <code>3.9.9</code> (<a href="https://github.com/apache/logging-log4j2/pull/2857">2857</a>)</p>
